# Mode7

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: ai-usage.md  asset-licenses.csv  changelog.md  code-walkthrough.md  execution-plan-to-july-2.md  gdd.md  project-plan.md  technical-documentation.md  testing-report.md
scripts/: benchmark_mode7.py  generate_music_assets.py  package.sh  validate.sh
src/aetherfront/: __init__.py  __main__.py  config.py  main.py
src/aetherfront/assets/: manifest.csv
src/aetherfront/audio/: __init__.py  manager.py
src/aetherfront/core/: game.py  states.py
src/aetherfront/data/: balance.json  waves.json
src/aetherfront/gameplay/: __init__.py  balance.py  boss.py  collisions.py  enemies.py  pickups.py  player.py  projectiles.py  session.py  targets.py  validation.py  waves.py  weapons.py
src/aetherfront/rendering/: billboards.py  camera.py  combat_sprites.py  effects.py  mode7.py  parallax.py  renderer.py  ships.py  terrain.py
src/aetherfront/ui/: __init__.py  hud.py  menus.py
tests/: acceptance-checklist.md  playtest-notes.md  test_audio.py  test_balance.py  test_benchmark.py  test_billboards.py  test_boss.py  test_camera.py  test_collisions.py  test_combat_sprites.py  test_config.py  test_effects.py  test_enemies.py  test_game.py  test_hud.py  test_menus.py  test_mode7.py  test_parallax.py  test_pickups.py  test_player.py  test_projectiles.py  test_renderer.py  test_session.py  test_ships.py  test_states.py  test_terrain.py  test_waves.py  test_weapons.py
